--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon backend/index.js",
-    "start": "NODE_ENV=production node backend/index.js",
+    "dev": "concurrently \"nodemon backend/index.js\" \"npm run dev --prefix frontend\"",
+    "pro": "NODE_ENV=production node backend/index.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -24,6 +25,7 @@
     "mailtrap": "^3.4.0",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.9.16",
+    "razorpay": "^2.9.5",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
