--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "rollup": "^4.32.1",
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
   }
