--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "razorpay": "^2.9.5",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
