--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "rollup": "^4.32.1"
+    "rollup": "^4.32.1",
+    "vite": "^6.1.0"
   }
 }
