--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"nodemon backend/index.js\" \"npm run dev --prefix frontend\"",
     "start": "nodemon backend/index.js",
-    "build": "npm install && npm install --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
