--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"nodemon backend/index.js\" \"npm run dev --prefix frontend\"",
+    "dev": "concurrently \"nodemon backend/index.js\" \"vite --host\"",
     "start": "nodemon backend/index.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
@@ -13,6 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "@vitejs/plugin-react": "^5.1.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
@@ -21,17 +24,29 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.554.0",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "razorpay": "^2.9.5",
-    "react-router-dom": "^7.1.1",
-    "url": "^0.11.4"
+    "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-lazy-load": "^4.0.1",
+    "react-router-dom": "^7.9.6",
+    "url": "^0.11.4",
+    "vite": "^7.2.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "autoprefixer": "^10.4.22",
     "nodemon": "^3.1.9",
-    "rollup": "^4.32.1"
+    "postcss": "^8.5.6",
+    "rollup": "^4.32.1",
+    "tailwindcss": "^3.4.18"
   }
 }
