--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "dev": "concurrently \"nodemon backend/index.js\" \"vite --host\"",
     "start": "nodemon backend/index.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.17",
     "@vitejs/plugin-react": "^5.1.1",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
@@ -42,7 +41,6 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.6",
