--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "react-router-dom": "^7.9.6",
     "url": "^0.11.4",
     "vite": "^7.2.2",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.22",
     "nodemon": "^3.1.9",
-    "postcss": "^8.5.6",
-    "rollup": "^4.32.1",
-    "tailwindcss": "^3.4.18"
+    "rollup": "^4.32.1"
   }
 }
