--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"nodemon backend/index.js\" \"vite --host\"",
+    "dev": "concurrently \"node backend/index.js\" \"vite --host\"",
     "start": "nodemon backend/index.js",
     "build": "vite build"
   },
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^9.1.2",
@@ -30,21 +31,20 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "postcss": "^8.5.6",
     "razorpay": "^2.9.5",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-lazy-load": "^4.0.1",
     "react-router-dom": "^7.9.6",
+    "tailwindcss": "^3.4.18",
     "url": "^0.11.4",
     "vite": "^7.2.2",
-    "zustand": "^5.0.8",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.11",
     "rollup": "^4.32.1"
   }
 }
