--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"node backend/index.js\" \"vite --host\"",
-    "start": "nodemon backend/index.js",
+    "start": "node backend/index.js",
     "build": "vite build"
   },
   "keywords": [],
