--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"node backend/index.js\" \"vite --host\"",
+    "dev": "vite --host",
     "start": "node backend/index.js",
     "build": "vite build"
   },
